css: Fix wrapping problem of milestone name in list

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3820,7 +3820,6 @@ label.issue-item-row {
 .mileston-tag {
     max-width: 135px;
     text-overflow: ellipsis;
-    white-space: nowrap;
     overflow: hidden;
     color: #2196f3;
     font-size:11px;
